# alchemyql

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
docs/: DEVELOPMENT.md  EXAMPLE-FASTAPI.md
src/alchemyql/: __init__.py  engine.py  filters.py  models.py  register.py  resolver.py  scalars.py  schema.py
src/alchemyql/fastapi/: router.py
tests/: conftest.py  test_fastapi.py  test_register.py
tests/build_schema/: test_build_schema.py
tests/build_schema/data/: A_test_case_combination.txt  A_test_case_exclude_fields.txt  A_test_case_filter_fields.txt  A_test_case_filter_fields2.txt  A_test_case_graphql_name.txt  A_test_case_include_exclude_fields.txt  A_test_case_include_fields.txt  A_test_case_order_fields.txt  A_test_case_order_fields2.txt  A_test_case_pagination.txt  A_test_case_pagination_default.txt  A_test_case_plain.txt  B.txt  C.txt  D.txt  D_test_case_combination.txt  D_test_case_many_to_many.txt  D_test_case_non_queryable_table.txt  D_test_case_one_to_many.txt
tests/databases/: a.py  b.json  b.py  c.json  c.py  d.json  d.py
tests/execute_query/: test_execute_query.py
tests/execute_query/data/A/: all_cols_query.json  bool_eq_filter.json  bool_ne_filter.json  complex_query.json  date_double_filter.json  date_ge_filter.json  date_gt_filter.json  date_in_filter.json  date_le_filter.json  date_lt_filter.json  date_ne_filter.json  datetime_double_filter.json  datetime_eq_filter.json  datetime_ge_filter.json  datetime_gt_filter.json  datetime_in_filter.json  (+45 more)
(+7 files in other folders)
